--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -28,7 +28,9 @@ layout: default
     {% if site.paginate and site.paginate_path and paginator.page > 1 %}
       CIAONE {{ paginator.page }}
     {% else %}
-      Welcome
+    <p align="center">
+  	<img src="assets/images/CoverCycle.svg" style="width: 55vw; min-width: 330px;" alt="Cover Image" />
+    </p>	
     {% endif %}
   </h1>
 
