--- a/_sass/_article.scss
+++ b/_sass/_article.scss
@@ -22,7 +22,8 @@
 
 .post p {
   text-align: justify;
-  text-indent: 1.5em;
+  font-size: 1.69em;
+  text-indent: 2em;
   text-justify: inter-word;
 }
 
